spacing fixes

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,3 +1,8 @@
+#about {
+    height: 100vh;
+    padding-top: 7rem;
+    overflow: hidden;
+}
 .about_container {
     display: grid;
     grid-template-columns: 35% 50%;
