--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -1,3 +1,8 @@
+#contact {
+    height: 100vh;
+    padding-top: 7rem;
+    overflow: hidden;
+}
 .container.contact_container {
     width: 58%;
     display: grid;
