--- a/src/components/portfolio/Portfolio.css
+++ b/src/components/portfolio/Portfolio.css
@@ -1,3 +1,7 @@
+#portfolio {
+    height: 150vh;
+    overflow: hidden;
+}
 .portfolio_container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
