--- a/src/components/services/Services.css
+++ b/src/components/services/Services.css
@@ -1,3 +1,8 @@
+#services {
+    height: 100vh;
+    padding-top: 7rem;
+    overflow: hidden;
+}
 .services_container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
