--- a/src/components/testimonial/Testimonial.css
+++ b/src/components/testimonial/Testimonial.css
@@ -1,3 +1,8 @@
+#testimonials {
+    height: 100vh;
+    padding-top: 7rem;
+    overflow: hidden;
+}
 .container.testimonials_container {
     width: 40%;
     padding-bottom: 4rem;
